* vm_insnhelper.c (argument_error): use line number at the beginning   of lambda, not the first code ob its body.   [ruby-core:43314][Bug #6151]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@35052 b2dd03c8-39d4-4d8f-98ff-823fe69b080e